# ml-zoomcamp

./: .gitignore  Dockerfile  pyproject.toml
apps/bank-marketing/: Dockerfile  app.py  pyproject.toml
apps/bank-marketing/tests/: test.py
apps/churn-decision-fastapi/: Dockerfile  churn-decision.py  hello.py  pyproject.toml
apps/churn-decision-flask/: Dockerfile  churn-decision.py  pyproject.toml
apps/svizor-bank-marketing/: Dockerfile  app.py  pyproject.toml
apps/svizor-bank-marketing/tests/: test.py
data/: CreditScoring.parquet  WA_Fn-UseC_-Telco-Customer-Churn.parquet  bank-full.parquet  data.parquet  jamb_exam_results.parquet  laptops.parquet
notebooks/: homework_01.ipynb  homework_02.ipynb  homework_03.ipynb  homework_04.ipynb  homework_06.ipynb  module_01.ipynb  module_02.ipynb  module_03.ipynb  module_04.ipynb  module_05-a-save-model.ipynb  module_05-b-load-model.ipynb  module_06.ipynb
src/ml_zoomcamp/: __init__.py  boost.py  churn.py  ping.py  predict.py  predict_test.py  regression.py  train.py  utils.py
