[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "scikit-learn==1.5.2",
]

[project.scripts]
ml-zoomcamp = "ml_zoomcamp:main"
train = "ml_zoomcamp.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "altair>=5.4.1",
    "arrow>=1.3.0",
    "awsebcli>=3.21.0",
    "httpx>=0.27.2",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "ruff>=0.6.7",
    "tqdm>=4.66.5",
]

[tool.uv.workspace]
members = ["apps/churn-decision-flask", "apps/churn-decision-fastapi"]
