[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "scikit-learn==1.5.2",
]

[project.scripts]
ml-zoomcamp = "ml_zoomcamp:main"
train = "ml_zoomcamp.train:main"
predict-test = "ml_zoomcamp.predict_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "awsebcli>=3.21.0",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.2",
    "pendulum>=3.0.0",
    "polars[pandas,plot]>=1.12.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "xgboost>=2.1.2",
]
lint = [
    "ruff>=0.7.2",
]

[tool.uv.workspace]
members = [
    "apps/churn-decision-flask",
    "apps/churn-decision-fastapi",
    "apps/bank-marketing",
    "apps/svizor-bank-marketing"
]
