[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "scikit-learn==1.5.2",
]

[project.scripts]
ml-zoomcamp = "ml_zoomcamp:main"
train = "ml_zoomcamp.train:main"
predict-test = "ml_zoomcamp.predict_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "awsebcli>=3.21.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "polars[pandas,plot]>=1.30.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
lint = [
    "pyright>=1.1.402",
    "ruff>=0.11.13",
]

[tool.uv.workspace]
members = [
    "apps/churn-decision-flask",
    "apps/churn-decision-fastapi",
    "apps/bank-marketing",
    "apps/svizor-bank-marketing"
]
